Use a smaller buffer for eexecDecode filter to avoid consumption of the data that follow a short (and incorrect) run of 0's in PS files generated by Adobe Acrobat from PDF files with usage restrictions. Bug 689577

DETAILS:
The buffer size of 132 has been selected from a middle of small window that
fixes the bug but doesn't cause regession in comparefiles/fonttest.pdf.
Detection of EOF after seing a run of 0's is worth to note as an alternative.

DIFFERENCES:
None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8428 a1074d23-0009-0410-80fe-cf8c14f379e6